--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
                         </div>
                         <div>
                             <h3>Email Address</h3>
-                            <p>hello@archtech.com</p>
+                            <p>tamudajiri9@gmail.com</p>
                         </div>
                     </div>
                 </div>
